# ds3os-loader-rs

./: Cargo.toml  README.md  a.out  build.rs  main.c  tea32.c
.github/workflows/: rust.yml
src/: api.rs  encrypt.rs  gui.rs  launch.rs  localize.rs  main.rs  patch.rs  table.rs
src/widgets/: detail_panel.rs  list.rs  mod.rs  topbar.rs
