[package]
name = "ds3os-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.73"

[dependencies]
reqwest = { version = "0.11.9", features = ["json"] }
lazy_static = "1.4.0"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
anyhow = "1.0.56"
iced = { path = "../iced/", features = ["tokio", "default_system_font"] }
iced_native = { path = "../iced/native" }
sysinfo = "0.23.5"
tea-soft = "0.3.0"
bytes = "1.1.0"
process-memory = "0.4.0"
tokio = { version = "1.17.0" }
futures = "0.3.21"
