[package]
name = "ds3os-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0.73"

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
lazy_static = "1.4.0"
serde_json = "1.0.82"
serde = { version = "1.0.139", features = ["derive"] }
anyhow = "1.0.58"
iced = { version = "0.4.2",  default-features = false, features = ["tokio", "glow", "glow_default_system_font"] }
iced_aw = { version = "0.2", default-features = false, features = ["floating_button", "split"] }
# iced = { path = "../iced/",  default-features = false, features = ["tokio", "glow", "glow_default_system_font"] }
# iced_aw = { path = "../iced_aw/", default-features = false, features = ["floating_button", "split"] }
sysinfo = "0.24.7"
bytes = "1.2.0"
process-memory = "0.4.0"
native-dialog = "0.6.3"
sys-locale = "0.2.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
